[gd_scene load_steps=42 format=3 uid="uid://d1o3jugrwwre7"]

[ext_resource type="Script" path="res://src/main/puzzle/piece/squish-fx.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bk3sqsj58oqi4" path="res://assets/main/filled-circle-8.png" id="2"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-manager.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://bp53uo0qg2hch" path="res://assets/main/puzzle/move.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://ymjvqnlnwhit" path="res://assets/main/puzzle/speedup.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://wq4mqhchd1r7" path="res://assets/main/puzzle/rotate0.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://cgncgbcx0u1v6" path="res://assets/main/puzzle/rotate1.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://d4kf3npweex5e" path="res://assets/main/puzzle/lock.wav" id="8"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/PuzzleTileMap.tscn" id="9"]
[ext_resource type="Shader" path="res://src/main/puzzle/flat-mix.gdshader" id="10"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/prelock.gd" id="11"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/piece/PieceInput.tscn" id="12"]
[ext_resource type="Script" path="res://src/main/puzzle/piece-sfx.gd" id="13"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/game-ended.gd" id="14"]
[ext_resource type="Script" path="res://src/main/puzzle/squish-map.gd" id="15"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/prespawn.gd" id="16"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/none.gd" id="17"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/move-piece.gd" id="18"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-states.gd" id="19"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/states/wait-for-playfield.gd" id="20"]
[ext_resource type="Script" path="res://src/main/puzzle/top-out.gd" id="21"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/sweat-drops.gd" id="22"]
[ext_resource type="AudioStream" uid="uid://cu441kwameiwy" path="res://assets/main/puzzle/squish.wav" id="23"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/presquish-sfx.gd" id="24"]
[ext_resource type="AudioStream" uid="uid://igvcssuphofn" path="res://assets/main/puzzle/presquish.wav" id="25"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-rotator.gd" id="26"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-mover.gd" id="27"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-dropper.gd" id="28"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-squisher.gd" id="29"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/piece-physics.gd" id="30"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/ghost-mover.gd" id="31"]
[ext_resource type="Script" path="res://src/main/puzzle/piece/tech-move-detector.gd" id="32"]
[ext_resource type="AudioStream" uid="uid://b6ujautgromol" path="res://assets/main/puzzle/rotate-sealed.wav" id="33"]
[ext_resource type="AudioStream" uid="uid://dvdbi38cicvxb" path="res://assets/main/puzzle/tech-move.wav" id="34"]
[ext_resource type="PackedScene" path="res://src/main/utils/StateMachine.tscn" id="35"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86pfy"]
resource_local_to_scene = true
shader = ExtResource("10")
shader_parameter/mix_color = Color(1, 1, 1, 0)

[sub_resource type="Curve" id="2"]
_data = [Vector2(0.131034, 0), 0.0, 0.0, 0, 0, Vector2(0.875862, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iynq3"]
resource_local_to_scene = true
shader = ExtResource("10")
shader_parameter/mix_color = Color(1, 1, 1, 0)

[sub_resource type="Gradient" id="4"]
offsets = PackedFloat32Array(0, 0.390947)
colors = PackedColorArray(1, 1, 1, 0.752941, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="7"]
gradient = SubResource("4")

[sub_resource type="ParticleProcessMaterial" id="6"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 2400, 0)
initial_velocity_min = -800.0
initial_velocity_max = -800.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale = 1.3
color_ramp = SubResource( 7 )

[node name="PieceManager" type="Control" groups=["night_mode_invisible"]]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 364.0
offset_top = 28.0
offset_right = 688.0
offset_bottom = 572.0
script = ExtResource("3")

[node name="TechMoveDetector" type="Node" parent="."]
script = ExtResource("32")

[node name="GhostMover" type="Node" parent="."]
script = ExtResource("31")
tile_map_path = NodePath("../TileMap")

[node name="TileMap" parent="." instance=ExtResource("9")]
z_index = 3
material = SubResource("ShaderMaterial_86pfy")
position = Vector2(0, -96)
format = 2

[node name="SquishFx" type="Control" parent="."]
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0
script = ExtResource("1")
squish_curve = SubResource("2")

[node name="SquishMap" parent="SquishFx" instance=ExtResource("9")]
material = SubResource("ShaderMaterial_iynq3")
position = Vector2(0, -96)
format = 2
script = ExtResource("15")

[node name="SweatDrops" type="GPUParticles2D" parent="SquishFx"]
z_index = 1
position = Vector2(200, 200)
emitting = false
process_material = SubResource("6")
texture = ExtResource("2")
script = ExtResource("22")

[node name="RelocateTimer" type="Timer" parent="SquishFx/SweatDrops"]
wait_time = 0.1
autostart = true

[node name="PresquishSfx" type="AudioStreamPlayer" parent="SquishFx"]
stream = ExtResource("25")
script = ExtResource("24")

[node name="States" parent="." instance=ExtResource("35")]
script = ExtResource("19")

[node name="None" type="Node" parent="States"]
script = ExtResource("17")

[node name="Prespawn" type="Node" parent="States"]
script = ExtResource("16")

[node name="MovePiece" type="Node" parent="States"]
script = ExtResource("18")

[node name="Prelock" type="Node" parent="States"]
script = ExtResource("11")

[node name="WaitForPlayfield" type="Node" parent="States"]
script = ExtResource("20")

[node name="TopOut" type="Node" parent="States"]
script = ExtResource("21")

[node name="GameEnded" type="Node" parent="States"]
script = ExtResource("14")

[node name="Physics" type="Node" parent="."]
script = ExtResource("30")
piece_states_path = NodePath("../States")

[node name="Rotator" type="Node" parent="Physics"]
script = ExtResource("26")
input_path = NodePath("../../Input")

[node name="Mover" type="Node" parent="Physics"]
script = ExtResource("27")
input_path = NodePath("../../Input")

[node name="Dropper" type="Node" parent="Physics"]
script = ExtResource("28")
input_path = NodePath("../../Input")
piece_mover_path = NodePath("../Mover")

[node name="Squisher" type="Node" parent="Physics"]
script = ExtResource("29")
input_path = NodePath("../../Input")

[node name="Input" parent="." instance=ExtResource("12")]

[node name="Sfx" type="Node" parent="."]
script = ExtResource("13")

[node name="Rotate0Sound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("6")
volume_db = -4.0
bus = &"Sound Bus"

[node name="Rotate1Sound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("7")
volume_db = -4.0
bus = &"Sound Bus"

[node name="SwapHoldPieceSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("7")
pitch_scale = 0.84
bus = &"Sound Bus"

[node name="RotateSealed0Sound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("33")
volume_db = -4.0
bus = &"Sound Bus"

[node name="RotateSealed1Sound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("33")
volume_db = -4.0
pitch_scale = 0.84
bus = &"Sound Bus"

[node name="MoveSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("4")
volume_db = -4.0
bus = &"Sound Bus"

[node name="LockSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("8")
bus = &"Sound Bus"

[node name="SquishSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("23")
bus = &"Sound Bus"

[node name="LevelUpSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("5")
bus = &"Sound Bus"

[node name="TechMoveSound" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("34")
volume_db = -6.0
bus = &"Sound Bus"

[connection signal="das_moved_left" from="." to="Sfx" method="_on_PieceManager_das_moved_left"]
[connection signal="das_moved_right" from="." to="Sfx" method="_on_PieceManager_das_moved_right"]
[connection signal="dropped" from="." to="TechMoveDetector" method="_on_PieceManager_dropped"]
[connection signal="finished_spin_move" from="." to="Sfx" method="_on_PieceManager_finished_spin_move"]
[connection signal="finished_squish_move" from="." to="Sfx" method="_on_PieceManager_finished_squish_move"]
[connection signal="hold_piece_swapped" from="." to="Sfx" method="_on_PieceManager_hold_piece_swapped"]
[connection signal="initial_das_moved_left" from="." to="Sfx" method="_on_PieceManager_initial_das_moved_left"]
[connection signal="initial_das_moved_right" from="." to="Sfx" method="_on_PieceManager_initial_das_moved_right"]
[connection signal="initial_rotated_180" from="." to="TechMoveDetector" method="_on_PieceManager_initial_rotated_180"]
[connection signal="initial_rotated_180" from="." to="Sfx" method="_on_PieceManager_initial_rotated_180"]
[connection signal="initial_rotated_ccw" from="." to="TechMoveDetector" method="_on_PieceManager_initial_rotated_ccw"]
[connection signal="initial_rotated_ccw" from="." to="Sfx" method="_on_PieceManager_initial_rotated_ccw"]
[connection signal="initial_rotated_cw" from="." to="TechMoveDetector" method="_on_PieceManager_initial_rotated_cw"]
[connection signal="initial_rotated_cw" from="." to="Sfx" method="_on_PieceManager_initial_rotated_cw"]
[connection signal="lock_cancelled" from="." to="Sfx" method="_on_PieceManager_lock_cancelled"]
[connection signal="lock_started" from="." to="Sfx" method="_on_PieceManager_lock_started"]
[connection signal="moved_left" from="." to="TechMoveDetector" method="_on_PieceManager_moved_left"]
[connection signal="moved_left" from="." to="Sfx" method="_on_PieceManager_moved_left"]
[connection signal="moved_right" from="." to="TechMoveDetector" method="_on_PieceManager_moved_right"]
[connection signal="moved_right" from="." to="Sfx" method="_on_PieceManager_moved_right"]
[connection signal="piece_disturbed" from="." to="Physics/Dropper" method="_on_PieceManager_piece_disturbed"]
[connection signal="piece_disturbed" from="." to="Physics/Squisher" method="_on_PieceManager_piece_disturbed"]
[connection signal="piece_spawned" from="." to="TechMoveDetector" method="_on_PieceManager_piece_spawned"]
[connection signal="playfield_disturbed" from="." to="Physics/Dropper" method="_on_PieceManager_playfield_disturbed"]
[connection signal="playfield_disturbed" from="." to="Physics/Squisher" method="_on_PieceManager_playfield_disturbed"]
[connection signal="rotated_180" from="." to="TechMoveDetector" method="_on_PieceManager_rotated_180"]
[connection signal="rotated_180" from="." to="Sfx" method="_on_PieceManager_rotated_180"]
[connection signal="rotated_ccw" from="." to="TechMoveDetector" method="_on_PieceManager_rotated_ccw"]
[connection signal="rotated_ccw" from="." to="Sfx" method="_on_PieceManager_rotated_ccw"]
[connection signal="rotated_cw" from="." to="TechMoveDetector" method="_on_PieceManager_rotated_cw"]
[connection signal="rotated_cw" from="." to="Sfx" method="_on_PieceManager_rotated_cw"]
[connection signal="squish_moved" from="." to="TechMoveDetector" method="_on_PieceManager_squish_moved"]
[connection signal="squish_moved" from="." to="SquishFx" method="_on_PieceManager_squish_moved"]
[connection signal="squish_moved" from="." to="Sfx" method="_on_PieceManager_squish_moved"]
[connection signal="tiles_changed" from="." to="SquishFx/SweatDrops" method="_on_PieceManager_tiles_changed"]
[connection signal="timeout" from="SquishFx/SweatDrops/RelocateTimer" to="SquishFx/SweatDrops" method="_on_RelocateTimer_timeout"]
[connection signal="entered_state" from="States" to="." method="_on_States_entered_state"]
[connection signal="initial_rotated_180" from="Physics/Rotator" to="." method="_on_Rotator_initial_rotated_180"]
[connection signal="initial_rotated_ccw" from="Physics/Rotator" to="." method="_on_Rotator_initial_rotated_ccw"]
[connection signal="initial_rotated_cw" from="Physics/Rotator" to="." method="_on_Rotator_initial_rotated_cw"]
[connection signal="rotated_180" from="Physics/Rotator" to="." method="_on_Rotator_rotated_180"]
[connection signal="rotated_ccw" from="Physics/Rotator" to="." method="_on_Rotator_rotated_ccw"]
[connection signal="rotated_cw" from="Physics/Rotator" to="." method="_on_Rotator_rotated_cw"]
[connection signal="das_moved_left" from="Physics/Mover" to="." method="_on_Mover_das_moved_left"]
[connection signal="das_moved_right" from="Physics/Mover" to="." method="_on_Mover_das_moved_right"]
[connection signal="initial_das_moved_left" from="Physics/Mover" to="." method="_on_Mover_initial_das_moved_left"]
[connection signal="initial_das_moved_right" from="Physics/Mover" to="." method="_on_Mover_initial_das_moved_right"]
[connection signal="moved_left" from="Physics/Mover" to="." method="_on_Mover_moved_left"]
[connection signal="moved_right" from="Physics/Mover" to="." method="_on_Mover_moved_right"]
[connection signal="dropped" from="Physics/Dropper" to="." method="_on_Dropper_dropped"]
[connection signal="hard_drop_target_pos_changed" from="Physics/Dropper" to="GhostMover" method="_on_Dropper_hard_drop_target_pos_changed"]
[connection signal="hard_dropped" from="Physics/Dropper" to="." method="_on_Dropper_hard_dropped"]
[connection signal="soft_dropped" from="Physics/Dropper" to="." method="_on_Dropper_soft_dropped"]
[connection signal="hard_dropped" from="Physics/Squisher" to="." method="_on_Squisher_hard_dropped"]
[connection signal="lock_cancelled" from="Physics/Squisher" to="." method="_on_Squisher_lock_cancelled"]
[connection signal="squish_moved" from="Physics/Squisher" to="." method="_on_Squisher_squish_moved"]
[connection signal="squish_moved" from="Physics/Squisher" to="Physics/Dropper" method="_on_Squisher_squish_moved"]
